--- a/BowlMaster.csproj
+++ b/BowlMaster.csproj
@@ -84,8 +84,9 @@
     <Compile Include="Assets\Scripts\BallScript.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\DragLaunchController.cs" />
-    <Compile Include="Assets\Scripts\LaneBoxController.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\PinController.cs" />
+    <Compile Include="Assets\Scripts\PinCounterController.cs" />
     <Compile Include="Assets\Scripts\PinSetterController.cs" />
     <Compile Include="Assets\Scripts\SchrederController.cs" />
     <Compile Include="Assets\Scripts\ScoreMaster.cs" />
